# cad-retriever

./: .gitignore  CLAUDE.md
assets/: 2026-04-06-autodl.md
context/: 00_DECISIONS.md  2026-06-10-21-36-cost-estimate.md
context/history/: pyproject.toml
context/history/docs/superpowers/plans/: 2026-05-30-autodl-env-setup.md  2026-05-31-training-pipeline-fix.md
context/history/docs/superpowers/specs/: 2026-05-30-cad-sketch-retriever-design.md  2026-05-31-training-pipeline-fix-design.md
context/history/memory/: environment.md  project_state.md
context/history/scripts/: build_index.py  download_abc.py  run_pipeline.py  train.py
context/history/src/cad_retriever/: config.py
context/history/src/cad_retriever/data/: __init__.py  convert.py  render.py
context/history/src/cad_retriever/eval/: __init__.py
context/history/src/cad_retriever/index/: __init__.py  build_index.py
context/history/src/cad_retriever/models/: lora.py
context/history/src/cad_retriever/serving/: app.py  trt_engine.py
context/history/src/cad_retriever/training/: __init__.py  dataset.py  hard_negatives.py
context/history/tests/: test_config.py  test_dataset.py  test_edge_detect.py  test_encoder.py  test_index.py  test_lora.py  test_lora_gradient.py  test_metrics.py  test_phase1_infonce.py  test_render_pyrender.py  test_serving.py  test_sketch_synth.py
memory/: MEMORY.md  project_state.md
scripts/: build_index.py  convert_all.py  embed_all.py  evaluate.py  monitor_and_run.py  preprocess_all.py  render_all.py  serve.py  train.py
tests/: conftest.py  test_config.py  test_losses.py  (+2 more)
(+77 files in other folders)
