[project]
name = "cad-retriever"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "open-clip-torch>=2.24",
    "faiss-gpu>=1.10",
    "Pillow>=10.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
train = ["wandb>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_retriever"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
